finished 02-JS and CSS Clock

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -71,13 +71,13 @@
   }
 
 function removeTransition(e){
+<!--  console.log(e);-->
   if(e.propertyName !== 'transform') return;
   this.classList.remove('playing');
   }
 
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-
   window.addEventListener('keydown',playSound);
 
 </script>
